--- a/src/application/FitnessTrackerView.fxml
+++ b/src/application/FitnessTrackerView.fxml
@@ -128,7 +128,7 @@
                         <Font size="33.0" />
                      </font>
                   </Label>
-                  <Label text="Current Date" />
+                  <Label fx:id="dateLabel" text="Current Date" />
                </children>
             </VBox>
             <Button fx:id="userProfileButton" layoutX="450.0" layoutY="58.0" mnemonicParsing="false" onAction="#openUserProfile" prefHeight="99.0" prefWidth="84.0" style="-fx-background-radius: 100; -fx-background-color: transparent;">
