--- a/src/application/UserSleepTracker.fxml
+++ b/src/application/UserSleepTracker.fxml
@@ -25,24 +25,18 @@
                   </Label>
                </children>
             </StackPane>
-            <TextField fx:id="hoursSleep" layoutX="210.0" layoutY="205.0" />
-            <Label alignment="CENTER" layoutX="34.0" layoutY="185.0" prefHeight="79.0" prefWidth="199.0" text="HOURS" textFill="#101010">
+            <TextField fx:id="hoursSleep" layoutX="192.0" layoutY="211.0" prefHeight="56.0" prefWidth="272.0" />
+            <Label alignment="CENTER" layoutX="-9.0" layoutY="190.0" prefHeight="99.0" prefWidth="237.0" text="HOURS" textFill="#101010">
                <font>
                   <Font name="System Bold" size="27.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="20.0" layoutY="276.0" prefHeight="79.0" prefWidth="199.0" text="MINUTES" textFill="#0d0d0d">
-               <font>
-                  <Font name="System Bold" size="27.0" />
-               </font>
-            </Label>
-            <TextField fx:id="minutesSleep" layoutX="210.0" layoutY="290.0" />
-            <Label fx:id="sleepProgress" alignment="CENTER" layoutX="34.0" layoutY="480.0" prefHeight="219.0" prefWidth="521.0" text="   " textAlignment="CENTER">
+            <Label fx:id="sleepProgressLabel" alignment="CENTER" layoutX="44.0" layoutY="520.0" prefHeight="219.0" prefWidth="521.0" text="   " textAlignment="CENTER">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Button layoutX="243.0" layoutY="361.0" mnemonicParsing="false" onAction="#setSleep" prefHeight="45.0" prefWidth="157.0" text="update sleep" textFill="#6945c4">
+            <Button layoutX="250.0" layoutY="288.0" mnemonicParsing="false" onAction="#setSleep" prefHeight="45.0" prefWidth="157.0" text="update hours" textFill="#6945c4">
                <font>
                   <Font size="21.0" />
                </font></Button>
@@ -50,7 +44,7 @@
                <font>
                   <Font size="24.0" />
                </font></Button>
-            <ProgressBar fx:id="sleepProgressBar" layoutX="55.0" layoutY="480.0" prefHeight="42.0" prefWidth="340.0" />
+            <ProgressBar fx:id="sleepProgressBar" layoutX="135.0" layoutY="459.0" prefHeight="42.0" prefWidth="340.0" />
          </children>
       </Pane>
    </left>
