--- a/src/application/WorkoutStats.fxml
+++ b/src/application/WorkoutStats.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="856.0" prefWidth="609.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.WorkoutStatistics">
+<AnchorPane prefHeight="856.0" prefWidth="609.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.WorkoutStatisticsController">
    <children>
       <BarChart fx:id="workoutStatsChart" layoutX="48.0" layoutY="172.0" prefHeight="557.0" prefWidth="500.0">
         <xAxis>
