--- a/src/application/FitnessTrackerView.fxml
+++ b/src/application/FitnessTrackerView.fxml
@@ -128,7 +128,16 @@
                         <Font size="33.0" />
                      </font>
                   </Label>
-                  <Label fx:id="dateLabel" text="Current Date" />
+                  <Label fx:id="dateLabel" text="Current Date">
+                  	<font>
+                  		<Font size="15.0" />
+                  	</font>
+                  </Label>
+                  <Label fx:id="goalsCompletedLabel" text="You have completed 0 goal(s)!">
+                  	<font>
+                  		<Font size="15.0" />
+                  	</font>
+                  </Label>
                </children>
             </VBox>
             <Button fx:id="userProfileButton" layoutX="450.0" layoutY="58.0" mnemonicParsing="false" onAction="#openUserProfile" prefHeight="99.0" prefWidth="84.0" style="-fx-background-radius: 100; -fx-background-color: transparent;">
