--- a/src/application/SleepTracker.fxml
+++ b/src/application/SleepTracker.fxml
@@ -17,34 +17,49 @@
          <children>
             <StackPane prefHeight="163.0" prefWidth="609.0">
                <children>
-                  <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#8570d8" height="91.0" opacity="0.76" stroke="#6944c5" strokeType="INSIDE" width="450.0" />
+                  <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#6b4191" height="95.0" stroke="#6b4191" strokeType="INSIDE" width="390.0">
+                     <effect>
+                        <DropShadow color="#00000080" />
+                     </effect>
+                     <StackPane.margin>
+                        <Insets top="40.0" />
+                     </StackPane.margin>
+                  </Rectangle>
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="233.0" prefWidth="517.0" text="SLEEP" textFill="WHITE">
                      <font>
-                        <Font name="System Bold" size="50.0" />
+                        <Font name="System Bold" size="30.0" />
                      </font>
+                     <padding>
+                        <Insets top="40.0" />
+                     </padding>
                   </Label>
                </children>
             </StackPane>
-            <TextField fx:id="hoursSleep" layoutX="192.0" layoutY="211.0" prefHeight="56.0" prefWidth="272.0" />
-            <Label alignment="CENTER" layoutX="-9.0" layoutY="190.0" prefHeight="99.0" prefWidth="237.0" text="HOURS" textFill="#101010">
+            <TextField fx:id="hoursSleep" layoutX="169.0" layoutY="300.0" prefHeight="56.0" prefWidth="272.0" />
+            <Label alignment="CENTER" layoutX="22.0" layoutY="193.0" prefHeight="99.0" prefWidth="569.0" text="Enter the amount of sleep you got today in hours: " textFill="#101010">
                <font>
-                  <Font name="System Bold" size="27.0" />
-               </font>
-            </Label>
+                  <Font size="25.0" />
+               </font></Label>
             <Label fx:id="sleepProgressLabel" alignment="CENTER" layoutX="44.0" layoutY="520.0" prefHeight="219.0" prefWidth="521.0" text="   " textAlignment="CENTER">
                <font>
                   <Font size="24.0" />
                </font>
             </Label>
-            <Button layoutX="250.0" layoutY="288.0" mnemonicParsing="false" onAction="#setSleep" prefHeight="45.0" prefWidth="157.0" text="update hours" textFill="#6945c4">
+            <Button layoutX="227.0" layoutY="383.0" mnemonicParsing="false" onAction="#setSleep" prefHeight="45.0" prefWidth="157.0" style="-fx-background-color: #6b4191;" text="Update Hours" textFill="WHITE">
                <font>
                   <Font size="21.0" />
-               </font></Button>
-            <Button layoutX="199.0" layoutY="780.0" mnemonicParsing="false" onAction="#returnToMain" prefHeight="54.0" prefWidth="211.0" style="-fx-background-radius: 20; -fx-background-color: #8570d8;" text="Return to Main" textFill="WHITE">
+               </font>
+               <effect>
+                  <DropShadow color="#00000080" />
+               </effect></Button>
+            <Button layoutX="199.0" layoutY="757.0" mnemonicParsing="false" onAction="#returnToMain" prefHeight="54.0" prefWidth="211.0" style="-fx-background-radius: 5; -fx-background-color: #6b4191;" text="Return to Main" textFill="WHITE">
                <font>
                   <Font size="24.0" />
-               </font></Button>
-            <ProgressBar fx:id="sleepProgressBar" layoutX="135.0" layoutY="459.0" prefHeight="42.0" prefWidth="340.0" />
+               </font>
+               <effect>
+                  <DropShadow color="#00000080" />
+               </effect></Button>
+            <ProgressBar fx:id="sleepProgressBar" layoutX="136.0" layoutY="488.0" prefHeight="42.0" prefWidth="340.0" />
          </children>
       </Pane>
    </left>
