--- a/src/application/NutritionTracker.fxml
+++ b/src/application/NutritionTracker.fxml
@@ -12,30 +12,6 @@
 <?import javafx.scene.layout.VBox?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="856.0" prefWidth="609.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.NutritionController">
-   <left>
-      <Pane prefHeight="909.0" prefWidth="609.0" BorderPane.alignment="CENTER">
-         <children>
-            <TextField fx:id="CalorieIntake" layoutX="359.0" layoutY="29.0" prefHeight="28.0" prefWidth="169.0" />
-            <Button layoutX="387.0" layoutY="81.0" mnemonicParsing="false" onAction="#setCalorieIntake" text = "SET INTAKE" style="-fx-background-radius: 20; -fx-background-color: ORANGE;" textFill="WHITE" />
-            <StackPane layoutX="10.0" layoutY="151.0" prefHeight="22.0" prefWidth="327.0">
-               <children>
-                  <Label fx:id="CalorieIntakeDisplay" alignment="CENTER" maxWidth="-Infinity" prefHeight="104.0" prefWidth="327.0" text="Label" textAlignment="CENTER" />
-               </children></StackPane>
-            <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#ffc600" height="44.0" layoutX="14.0" layoutY="26.0" opacity="0.76" stroke="ORANGE" strokeType="INSIDE" width="325.0" />
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="26.0" prefHeight="44.0" prefWidth="334.0" text="Enter your Calorie Intake:" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="25.0" />
-               </font>
-            </Label>
-         </children>
-      </Pane>
-   </left>
-   <center>
-      <VBox prefHeight="856.0" prefWidth="360.0" BorderPane.alignment="CENTER" />
-   </center>
-   <bottom>
-      <Button mnemonicParsing="false" onAction="#returnToMain" style="-fx-background-radius: 20; -fx-background-color: ORANGE;" text="RETURN TO MAIN" textFill="WHITE" />
-   </bottom>
    <top>
       <StackPane prefHeight="163.0" prefWidth="609.0" BorderPane.alignment="CENTER">
          <children>
@@ -48,4 +24,55 @@
          </children>
       </StackPane>
    </top>
+   <bottom>
+      <Pane prefHeight="104.0" prefWidth="609.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button layoutX="199.0" layoutY="25.0" mnemonicParsing="false" onAction="#returnToMain" prefHeight="55.0" prefWidth="211.0" style="-fx-background-radius: 20; -fx-background-color: ORANGE;" text="RETURN TO MAIN" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Button>
+         </children>
+      </Pane>
+   </bottom>
+   <center>
+      <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button layoutX="24.0" layoutY="39.0" mnemonicParsing="false" onAction="#setCalorieIntake" prefHeight="43.0" prefWidth="281.0" style="-fx-background-radius: 10; -fx-background-color: ORANGE;" text="SET CALORIE INTAKE" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Button>
+            <Button alignment="CENTER" layoutX="24.0" layoutY="295.0" mnemonicParsing="false" onAction="#compareWeight" prefHeight="39.0" prefWidth="283.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="WEIGHT PROGRESS" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Button>
+            <Button alignment="CENTER" layoutX="23.0" layoutY="157.0" mnemonicParsing="false" onAction="#updateServingRatio" prefHeight="39.0" prefWidth="283.0" style="-fx-background-radius: 10; -fx-background-color: ORANGE;" text="UPDATE SERVING RATIO" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Button>
+            <Label layoutX="339.0" layoutY="26.0" prefHeight="27.0" prefWidth="212.0" text="Enter Calorie Intake:" />
+            <Label fx:id="CalorieIntakeDisplay" layoutX="351.0" layoutY="83.0" prefHeight="72.0" prefWidth="178.0" text="Calorie display" />
+            <Label fx:id="servingRatioLabel" layoutX="418.0" layoutY="210.0" prefHeight="27.0" prefWidth="169.0" text="Serving Ratio" />
+            <Label fx:id="userWeightLabel" layoutX="329.0" layoutY="301.0" prefHeight="32.0" prefWidth="222.0" text="weight progress" />
+            <Label fx:id="bmiDisplayLabel" layoutX="332.0" layoutY="368.0" prefHeight="73.0" prefWidth="229.0" text="Bmi display" />
+            <Label layoutX="366.0" layoutY="498.0" text="body fat label" />
+            <TextField fx:id="CalorieIntake" layoutX="340.0" layoutY="53.0" prefHeight="30.0" prefWidth="162.0" />
+            <Label fx:id="carbsLabel" layoutX="332.0" layoutY="166.0" prefHeight="27.0" prefWidth="120.0" text="carbs" />
+            <Label fx:id="fatLabel" layoutX="329.0" layoutY="201.0" prefHeight="27.0" prefWidth="120.0" text="fat" />
+            <Label fx:id="fiberLabel" layoutX="329.0" layoutY="237.0" prefHeight="27.0" prefWidth="120.0" text="fiber" />
+            <Button alignment="CENTER" layoutX="24.0" layoutY="383.0" mnemonicParsing="false" onAction="#calculateBMI" prefHeight="39.0" prefWidth="283.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="CALCULATE BMI" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Button>
+            <Button alignment="CENTER" layoutX="24.0" layoutY="490.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="283.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="CALCULATE BFP" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Button>
+         </children>
+      </Pane>
+   </center>
 </BorderPane>
