--- a/src/application/NutritionTracker.fxml
+++ b/src/application/NutritionTracker.fxml
@@ -57,7 +57,7 @@
             <Label fx:id="servingRatioLabel" layoutX="418.0" layoutY="210.0" prefHeight="27.0" prefWidth="169.0" text="Serving Ratio" />
             <Label fx:id="userWeightLabel" layoutX="329.0" layoutY="301.0" prefHeight="32.0" prefWidth="222.0" text="weight progress" />
             <Label fx:id="bmiDisplayLabel" layoutX="332.0" layoutY="368.0" prefHeight="73.0" prefWidth="229.0" text="Bmi display" />
-            <Label layoutX="366.0" layoutY="498.0" text="body fat label" />
+            <Label fx:id = "bfpDisplayLabel" layoutX="366.0" layoutY="498.0" text="body fat label" />
             <TextField fx:id="CalorieIntake" layoutX="340.0" layoutY="53.0" prefHeight="30.0" prefWidth="162.0" />
             <Label fx:id="carbsLabel" layoutX="332.0" layoutY="166.0" prefHeight="27.0" prefWidth="120.0" text="carbs" />
             <Label fx:id="fatLabel" layoutX="329.0" layoutY="201.0" prefHeight="27.0" prefWidth="120.0" text="fat" />
@@ -67,7 +67,7 @@
                   <Font name="System Bold" size="20.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" layoutX="24.0" layoutY="490.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="283.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="CALCULATE BFP" textAlignment="CENTER" textFill="WHITE">
+            <Button alignment="CENTER" layoutX="24.0" layoutY="490.0" mnemonicParsing="false" onAction= "#calcBFP" prefHeight="39.0" prefWidth="283.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="CALCULATE BFP" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
