--- a/src/application/NutritionTracker.fxml
+++ b/src/application/NutritionTracker.fxml
@@ -37,41 +37,51 @@
    <center>
       <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="24.0" layoutY="39.0" mnemonicParsing="false" onAction="#setCalorieIntake" prefHeight="43.0" prefWidth="281.0" style="-fx-background-radius: 10; -fx-background-color: ORANGE;" text="SET CALORIE INTAKE" textAlignment="CENTER" textFill="WHITE">
+            <Button layoutX="23.0" layoutY="31.0" mnemonicParsing="false" onAction="#setCalorieIntake" prefHeight="43.0" prefWidth="281.0" style="-fx-background-radius: 10; -fx-background-color: ORANGE;" text="SET CALORIE INTAKE" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" layoutX="24.0" layoutY="295.0" mnemonicParsing="false" onAction="#compareWeight" prefHeight="39.0" prefWidth="283.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="WEIGHT PROGRESS" textAlignment="CENTER" textFill="WHITE">
+            <Button alignment="CENTER" layoutX="14.0" layoutY="484.0" mnemonicParsing="false" onAction="#compareWeight" prefHeight="39.0" prefWidth="283.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="WEIGHT PROGRESS" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" layoutX="23.0" layoutY="157.0" mnemonicParsing="false" onAction="#updateServingRatio" prefHeight="39.0" prefWidth="283.0" style="-fx-background-radius: 10; -fx-background-color: ORANGE;" text="UPDATE SERVING RATIO" textAlignment="CENTER" textFill="WHITE">
+            <Button alignment="CENTER" layoutX="289.0" layoutY="331.0" mnemonicParsing="false" onAction="#updateServingRatio" prefHeight="39.0" prefWidth="283.0" style="-fx-background-radius: 10; -fx-background-color: ORANGE;" text="CALCULATE SERVING" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
             </Button>
-            <Label layoutX="339.0" layoutY="26.0" prefHeight="27.0" prefWidth="212.0" text="Enter Calorie Intake:" />
-            <Label fx:id="CalorieIntakeDisplay" layoutX="351.0" layoutY="83.0" prefHeight="72.0" prefWidth="178.0" text="Calorie display" />
-            <Label fx:id="servingRatioLabel" layoutX="418.0" layoutY="210.0" prefHeight="27.0" prefWidth="169.0" text="Serving Ratio" />
-            <Label fx:id="userWeightLabel" layoutX="329.0" layoutY="301.0" prefHeight="32.0" prefWidth="222.0" text="weight progress" />
-            <Label fx:id="bmiDisplayLabel" layoutX="332.0" layoutY="368.0" prefHeight="73.0" prefWidth="229.0" text="Bmi display" />
-            <Label fx:id = "bfpDisplayLabel" layoutX="366.0" layoutY="498.0" text="body fat label" />
+            <Label layoutX="334.0" layoutY="14.0" prefHeight="27.0" prefWidth="212.0" text="Enter Calorie Intake:">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font></Label>
+            <Label fx:id="CalorieIntakeDisplay" layoutX="4.0" layoutY="83.0" prefHeight="72.0" prefWidth="603.0" text="Calorie display">
+               <font>
+                  <Font size="19.0" />
+               </font></Label>
+            <Label fx:id="servingRatioLabel" layoutX="21.0" layoutY="304.0" prefHeight="105.0" prefWidth="270.0" text="Serving Ratio" />
+            <Label fx:id="userWeightLabel" layoutX="23.0" layoutY="534.0" prefHeight="47.0" prefWidth="579.0" text="weight progress">
+               <font>
+                  <Font size="20.0" />
+               </font></Label>
+            <Label fx:id="bmiDisplayLabel" layoutX="326.0" layoutY="421.0" prefHeight="137.0" prefWidth="229.0" text="Bmi display">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font></Label>
             <TextField fx:id="CalorieIntake" layoutX="340.0" layoutY="53.0" prefHeight="30.0" prefWidth="162.0" />
-            <Label fx:id="carbsLabel" layoutX="332.0" layoutY="166.0" prefHeight="27.0" prefWidth="120.0" text="carbs" />
-            <Label fx:id="fatLabel" layoutX="329.0" layoutY="201.0" prefHeight="27.0" prefWidth="120.0" text="fat" />
-            <Label fx:id="fiberLabel" layoutX="329.0" layoutY="237.0" prefHeight="27.0" prefWidth="120.0" text="fiber" />
-            <Button alignment="CENTER" layoutX="24.0" layoutY="383.0" mnemonicParsing="false" onAction="#calculateBMI" prefHeight="39.0" prefWidth="283.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="CALCULATE BMI" textAlignment="CENTER" textFill="WHITE">
+            <Button alignment="CENTER" layoutX="14.0" layoutY="417.0" mnemonicParsing="false" onAction="#calculateBMI" prefHeight="39.0" prefWidth="283.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="CALCULATE BMI" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" layoutX="24.0" layoutY="490.0" mnemonicParsing="false" onAction= "#calcBFP" prefHeight="39.0" prefWidth="283.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="CALCULATE BFP" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font>
-            </Button>
+            <Label layoutX="16.0" layoutY="173.0" prefHeight="27.0" prefWidth="390.0" text="Enter amount of carbs in serving (g):" />
+            <Label layoutX="8.0" layoutY="271.0" prefHeight="27.0" prefWidth="381.0" text="Enter amount of protein in serving (g):" />
+            <Label layoutX="12.0" layoutY="219.0" prefHeight="27.0" prefWidth="397.0" text="Enter amount of fat in serving (g):" />
+            <TextField fx:id="carbsTextField" layoutX="325.0" layoutY="167.0" prefHeight="20.0" prefWidth="192.0" />
+            <TextField fx:id="fatTextField" layoutX="325.0" layoutY="213.0" prefHeight="10.0" prefWidth="192.0" />
+            <TextField fx:id="proteinTextField" layoutX="325.0" layoutY="265.0" prefHeight="10.0" prefWidth="192.0" />
+            <Button layoutX="183.0" layoutY="337.0" mnemonicParsing="false" onAction="#calculateServingRatio" text="Button" />
          </children>
       </Pane>
    </center>
