--- a/src/application/WaterIntake.fxml
+++ b/src/application/WaterIntake.fxml
@@ -28,34 +28,6 @@
          </children>
       </StackPane>
    </top>
-   <center>
-      <VBox alignment="CENTER" prefHeight="486.0" prefWidth="609.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label prefHeight="46.0" prefWidth="455.0" text="Enter your water intake amount (in cups):">
-               <font>
-                  <Font size="24.5" />
-               </font>
-               <VBox.margin>
-                  <Insets bottom="50.0" />
-               </VBox.margin>
-            </Label>
-            <TextField fx:id="amountOfWater" alignment="CENTER" prefHeight="51.0" prefWidth="425.0" />
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#calculateAmountWater" style="-fx-background-color: #3e9acf; -fx-background-radius: 5;" text="Update Water Progress" textFill="WHITE">
-               <effect>
-                  <DropShadow color="#00000080" />
-               </effect>
-               <VBox.margin>
-                  <Insets bottom="50.0" top="50.0" />
-               </VBox.margin>
-            </Button>
-            <Label fx:id="waterProgressLabel" text="Label">
-               <font>
-                  <Font size="24.5" />
-               </font>
-            </Label>
-         </children>
-      </VBox>
-   </center>
    <bottom>
       <Pane prefHeight="102.0" prefWidth="609.0" BorderPane.alignment="CENTER">
          <children>
@@ -70,4 +42,29 @@
          </children>
       </Pane>
    </bottom>
+   <center>
+      <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label alignment="CENTER" layoutX="-2.0" layoutY="14.0" prefHeight="64.0" prefWidth="609.0" text="Enter your water intake amount (in cups):">
+               <font>
+                  <Font size="24.5" />
+               </font>
+            </Label>
+            <Button alignment="CENTER" contentDisplay="CENTER" layoutX="183.0" layoutY="239.0" mnemonicParsing="false" onAction="#calculateAmountWater" prefHeight="51.0" prefWidth="239.0" style="-fx-background-color: #3e9acf; -fx-background-radius: 5;" text="Update Water Progress" textFill="WHITE">
+               <effect>
+                  <DropShadow color="#00000080" />
+               </effect>
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Button>
+            <Label fx:id="waterProgressLabel" alignment="CENTER" layoutX="44.0" layoutY="342.0" prefHeight="109.0" prefWidth="518.0" text="water progress">
+               <font>
+                  <Font size="24.5" />
+               </font>
+            </Label>
+            <TextField fx:id="amountOfWater" alignment="CENTER" layoutX="30.0" layoutY="130.0" prefHeight="51.0" prefWidth="561.0" />
+         </children>
+      </Pane>
+   </center>
 </BorderPane>
