--- a/src/application/WaterIntake.fxml
+++ b/src/application/WaterIntake.fxml
@@ -58,12 +58,16 @@
                   <Font size="20.0" />
                </font>
             </Button>
-            <Label fx:id="waterProgressLabel" alignment="CENTER" layoutX="44.0" layoutY="342.0" prefHeight="109.0" prefWidth="518.0" text="water progress">
+            <Label fx:id="waterProgressLabel" alignment="CENTER" layoutX="46.0" layoutY="366.0" prefHeight="109.0" prefWidth="518.0" text="water progress">
                <font>
                   <Font size="24.5" />
                </font>
             </Label>
             <TextField fx:id="amountOfWater" alignment="CENTER" layoutX="30.0" layoutY="130.0" prefHeight="51.0" prefWidth="561.0" />
+            <Label fx:id="waterErrorLabel" alignment="CENTER" layoutX="48.0" layoutY="332.0" prefHeight="27.0" prefWidth="502.0" text=" " textAlignment="CENTER" textFill="RED">
+               <font>
+                  <Font size="20.0" />
+               </font></Label>
          </children>
       </Pane>
    </center>
