Updated layout and added error label

--- a/src/application/NutritionTracker.fxml
+++ b/src/application/NutritionTracker.fxml
@@ -15,10 +15,13 @@
    <top>
       <StackPane prefHeight="163.0" prefWidth="609.0" BorderPane.alignment="CENTER">
          <children>
-            <Rectangle arcHeight="20.0" arcWidth="20.0" fill="ORANGE" height="91.0" opacity="0.76" stroke="ORANGE" strokeType="INSIDE" width="450.0" />
+            <Rectangle arcHeight="20.0" arcWidth="20.0" fill="ORANGE" height="91.0" opacity="0.76" stroke="ORANGE" strokeType="INSIDE" width="387.0">
+               <effect>
+                  <DropShadow color="#00000080" />
+               </effect></Rectangle>
             <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="233.0" prefWidth="517.0" text="NUTRITION" textFill="WHITE">
                <font>
-                  <Font name="System Bold" size="50.0" />
+                  <Font name="System Bold" size="30.0" />
                </font>
             </Label>
          </children>
@@ -30,11 +33,10 @@
             <Button layoutX="199.0" layoutY="25.0" mnemonicParsing="false" onAction="#returnToMain" prefHeight="55.0" prefWidth="211.0" style="-fx-background-radius: 20; -fx-background-color: ORANGE;" text="RETURN TO MAIN" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="18.0" />
-               </font></Button>
-               <Label fx:id="weightProgressLabel" layoutX="15.0" layoutY="-9.0" prefHeight="47.0" prefWidth="579.0" text="weight start and current">
-               <font>
-                  <Font size="20.0" />
-               </font></Label>
+               </font>
+               <effect>
+                  <DropShadow color="#00000080" />
+               </effect></Button>
          </children>
       </Pane>
    </bottom>
@@ -45,39 +47,48 @@
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
+               <effect>
+                  <DropShadow color="#00000080" />
+               </effect>
             </Button>
-            <Button alignment="CENTER" layoutX="14.0" layoutY="484.0" mnemonicParsing="false" onAction="#compareWeight" prefHeight="39.0" prefWidth="283.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="WEIGHT PROGRESS" textAlignment="CENTER" textFill="WHITE">
+            <Button alignment="CENTER" layoutX="23.0" layoutY="469.0" mnemonicParsing="false" onAction="#compareWeight" prefHeight="39.0" prefWidth="283.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="WEIGHT PROGRESS" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
+               <effect>
+                  <DropShadow color="#00000080" />
+               </effect>
             </Button>
-            <Button alignment="CENTER" layoutX="289.0" layoutY="331.0" mnemonicParsing="false" onAction="#updateServingRatio" prefHeight="39.0" prefWidth="283.0" style="-fx-background-radius: 10; -fx-background-color: ORANGE;" text="CALCULATE SERVING" textAlignment="CENTER" textFill="WHITE">
+            <Button alignment="CENTER" layoutX="22.0" layoutY="316.0" mnemonicParsing="false" onAction="#updateServingRatio" prefHeight="39.0" prefWidth="283.0" style="-fx-background-radius: 10; -fx-background-color: ORANGE;" text="CALCULATE SERVING" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
+               <effect>
+                  <DropShadow color="#00000080" />
+               </effect>
             </Button>
             <Label layoutX="334.0" layoutY="14.0" prefHeight="27.0" prefWidth="212.0" text="Enter Calorie Intake:">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font></Label>
-            <Label fx:id="CalorieIntakeDisplay" layoutX="4.0" layoutY="83.0" prefHeight="72.0" prefWidth="603.0" text="Calorie display">
+            <Label fx:id="CalorieIntakeDisplay" layoutX="4.0" layoutY="83.0" prefHeight="72.0" prefWidth="603.0" text="Calorie display:">
                <font>
                   <Font size="19.0" />
-               </font></Label>
-            <Label fx:id="servingRatioLabel" layoutX="21.0" layoutY="304.0" prefHeight="105.0" prefWidth="270.0" text="Serving Ratio" />
-            <Label fx:id="userWeightLabel" layoutX="23.0" layoutY="530.0" prefHeight="47.0" prefWidth="420.0" text="weight progress">
-               <font>
-                  <Font size="20.0" />
-               </font></Label>
-            <Label fx:id="bmiDisplayLabel" layoutX="307.0" layoutY="383.0" prefHeight="94.0" prefWidth="229.0" text="Bmi display">
-               <font>
-                  <Font name="System Bold" size="20.0" />
-               </font></Label>
+               </font>
+               <padding>
+                  <Insets left="20.0" />
+               </padding></Label>
+            <Label fx:id="servingRatioLabel" layoutX="325.0" layoutY="313.0" prefHeight="105.0" prefWidth="270.0" text="Serving Ratio:" />
+            <Label fx:id="userWeightLabel" layoutX="313.0" layoutY="454.0" prefHeight="47.0" prefWidth="420.0" text="Weight Progress:" />
+            <Label fx:id="bmiDisplayLabel" layoutX="326.0" layoutY="393.0" prefHeight="94.0" prefWidth="229.0" text="BMI display:" />
             <TextField fx:id="CalorieIntake" layoutX="340.0" layoutY="53.0" prefHeight="30.0" prefWidth="162.0" />
-            <Button alignment="CENTER" layoutX="14.0" layoutY="417.0" mnemonicParsing="false" onAction="#calculateBMI" prefHeight="39.0" prefWidth="283.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="CALCULATE BMI" textAlignment="CENTER" textFill="WHITE">
+            <Button alignment="CENTER" layoutX="22.0" layoutY="418.0" mnemonicParsing="false" onAction="#calculateBMI" prefHeight="39.0" prefWidth="283.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="CALCULATE BMI" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
+               <effect>
+                  <DropShadow color="#00000080" />
+               </effect>
             </Button>
             <Label layoutX="16.0" layoutY="173.0" prefHeight="27.0" prefWidth="390.0" text="Enter amount of carbs in serving (g):" />
             <Label layoutX="8.0" layoutY="271.0" prefHeight="27.0" prefWidth="381.0" text="Enter amount of protein in serving (g):" />
@@ -85,13 +96,31 @@
             <TextField fx:id="carbsTextField" layoutX="325.0" layoutY="167.0" prefHeight="20.0" prefWidth="192.0" />
             <TextField fx:id="fatTextField" layoutX="325.0" layoutY="213.0" prefHeight="10.0" prefWidth="192.0" />
             <TextField fx:id="proteinTextField" layoutX="325.0" layoutY="265.0" prefHeight="10.0" prefWidth="192.0" />
-            <Button layoutX="183.0" layoutY="337.0" mnemonicParsing="false" onAction="#calculateServingRatio" text="Button" />
-            <TextField fx:id="currentWeightTextField" layoutX="379.0" layoutY="465.0" prefHeight="39.0" prefWidth="157.0" />
-            <Button alignment="CENTER" layoutX="346.0" layoutY="512.0" mnemonicParsing="false" onAction="#setCurrentWeight" prefHeight="44.0" prefWidth="241.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="set current weight" textAlignment="CENTER" textFill="WHITE">
+            <TextField fx:id="currentWeightTextField" layoutX="343.0" layoutY="513.0" prefHeight="39.0" prefWidth="157.0" />
+            <Button alignment="CENTER" layoutX="21.0" layoutY="516.0" mnemonicParsing="false" onAction="#setCurrentWeight" prefHeight="44.0" prefWidth="287.0" style="-fx-background-color: ORANGE; -fx-background-radius: 10;" text="SET CURRENT WEIGHT" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
+               <effect>
+                  <DropShadow color="#00000080" />
+               </effect>
             </Button>
+            <Button alignment="CENTER" layoutX="15.0" layoutY="365.0" mnemonicParsing="false" onAction="#calculateServingRatio" prefHeight="44.0" prefWidth="298.0" style="-fx-background-radius: 10; -fx-background-color: ORANGE;" text="CALCULATE SERVING RATIO" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+               <effect>
+                  <DropShadow color="#00000080" />
+               </effect>
+            </Button>
+               <Label fx:id="weightProgressLabel" layoutX="3.0" layoutY="567.0" prefHeight="47.0" prefWidth="579.0" text="Comparison:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <padding>
+                  <Insets left="30.0" />
+               </padding></Label>
+            <Label fx:id="errorLabel" layoutX="171.0" layoutY="-17.0" textFill="RED" />
          </children>
       </Pane>
    </center>
