--- a/src/application/StepsView.fxml
+++ b/src/application/StepsView.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.collections.FXCollections?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="856.0" prefWidth="609.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.StepsController">
    <top>
@@ -59,7 +60,43 @@
                   <ChoiceBox fx:id="dayOfMonth" prefHeight="50.0" prefWidth="120.0">
                      <HBox.margin>
                         <Insets left="65.0" />
-                     </HBox.margin></ChoiceBox>
+                     </HBox.margin>
+                     <items>
+            		<FXCollections fx:factory="observableArrayList">
+            			<Integer fx:value="1" />
+            			<Integer fx:value="2" />
+            			<Integer fx:value="3" />
+            			<Integer fx:value="4" />
+            			<Integer fx:value="5" />
+            			<Integer fx:value="6" />
+            			<Integer fx:value="7" />
+            			<Integer fx:value="8" />
+            			<Integer fx:value="9" />
+            			<Integer fx:value="10" />
+            			<Integer fx:value="11" />
+            			<Integer fx:value="12" />
+            			<Integer fx:value="13" />
+            			<Integer fx:value="14" />
+            			<Integer fx:value="15" />
+            			<Integer fx:value="16" />
+            			<Integer fx:value="17" />
+            			<Integer fx:value="18" />
+            			<Integer fx:value="19" />
+            			<Integer fx:value="20" />
+            			<Integer fx:value="21" />
+            			<Integer fx:value="22" />
+            			<Integer fx:value="23" />
+            			<Integer fx:value="24" />
+            			<Integer fx:value="25" />
+            			<Integer fx:value="26" />
+            			<Integer fx:value="27" />
+            			<Integer fx:value="28" />
+            			<Integer fx:value="29" />
+            			<Integer fx:value="30" />
+            			<Integer fx:value="31" />   			
+            		</FXCollections>
+            	</items>
+                     </ChoiceBox>
                   <Label prefHeight="7.0" text="&gt;">
                      <font>
                         <Font size="36.0" />
@@ -88,6 +125,11 @@
                <effect>
                   <Blend />
                </effect></Button>
+            <Label fx:id="stepsErrorLabel" prefHeight="21.0" prefWidth="294.0">
+               <padding>
+                  <Insets left="30.0" />
+               </padding>
+            </Label>
          </children>
       </VBox>
    </center>
