--- a/src/application/FitnessTrackerView.fxml
+++ b/src/application/FitnessTrackerView.fxml
@@ -53,7 +53,7 @@
                         <DropShadow blurType="ONE_PASS_BOX" color="#b02219" />
                      </effect>
                   </Button>
-                  <Label layoutX="68.0" layoutY="-58.0" text="10,000">
+                  <Label fx:id="stepsThisMonth" layoutX="68.0" layoutY="-58.0" text="10,000">
                      <font>
                         <Font name="System Bold" size="28.0" />
                      </font>
