Added image to steps screen

--- a/src/application/StepsView.fxml
+++ b/src/application/StepsView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.collections.*?>
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.effect.*?>
 <?import javafx.scene.image.*?>
@@ -16,12 +17,17 @@
    <top>
       <StackPane prefHeight="212.0" prefWidth="609.0" BorderPane.alignment="CENTER">
          <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#47a0c6" height="159.0" stroke="#52d4ff" strokeLineCap="BUTT" strokeLineJoin="ROUND" strokeType="OUTSIDE" strokeWidth="2.0" width="481.0" />
+            <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#47a0c6" height="159.0" stroke="#52d4ff" strokeLineCap="BUTT" strokeLineJoin="ROUND" strokeType="OUTSIDE" strokeWidth="2.0" width="481.0" />
             <Label text="Steps" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="58.0" />
                </font>
             </Label>
+            <AnchorPane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <ImageView fx:id="stepsIcon" fitHeight="150.0" fitWidth="150.0" layoutX="70.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
+               </children>
+            </AnchorPane>
          </children>
       </StackPane>
    </top>
@@ -30,36 +36,45 @@
          <children>
             <StackPane prefHeight="150.0" prefWidth="200.0">
                <children>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ff6459e8" height="66.0" stroke="BLACK" strokeType="INSIDE" width="481.0">
+                  <Rectangle arcHeight="30.0" arcWidth="20.0" fill="#ff6459e8" height="66.0" stroke="WHITE" strokeLineCap="ROUND" strokeType="INSIDE" width="481.0">
                      <StackPane.margin>
                         <Insets />
                      </StackPane.margin></Rectangle>
-                  <Label prefHeight="46.0" prefWidth="390.0" text="how many steps did you take today?">
+                  <Label prefHeight="46.0" prefWidth="390.0" text="LOG YOUR DAILY STEP COUNT" textAlignment="CENTER">
                      <font>
-                        <Font name="Microsoft Tai Le" size="24.0" />
+                        <Font name="Yu Gothic UI Regular" size="24.0" />
                      </font>
+                     <StackPane.margin>
+                        <Insets left="50.0" />
+                     </StackPane.margin>
                   </Label>
                </children>
             </StackPane>
             <HBox prefHeight="10.0" prefWidth="200.0">
                <children>
-                  <Label text="Day of the month:">
+                  <Label text="Day of the month:" textFill="#ff6459">
                      <HBox.margin>
-                        <Insets left="65.0" />
+                        <Insets left="50.0" />
                      </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
                   </Label>
-                  <Label text="Steps taken:">
+                  <Label text="Steps taken:" textFill="#ff6459">
                      <HBox.margin>
-                        <Insets left="135.0" />
+                        <Insets left="140.0" />
                      </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
                   </Label>
                </children>
             </HBox>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <ChoiceBox fx:id="dayOfMonth" prefHeight="50.0" prefWidth="120.0">
+                  <ChoiceBox fx:id="dayOfMonth" prefHeight="50.0" prefWidth="128.0">
                      <HBox.margin>
-                        <Insets left="65.0" />
+                        <Insets left="50.0" />
                      </HBox.margin>
                      <items>
             		<FXCollections fx:factory="observableArrayList">
@@ -102,25 +117,25 @@
                         <Font size="36.0" />
                      </font>
                      <HBox.margin>
-                        <Insets bottom="10.0" left="45.0" right="45.0" />
+                        <Insets bottom="10.0" left="50.0" right="45.0" />
                      </HBox.margin>
                   </Label>
                   <TextField fx:id="stepsTextField" alignment="CENTER" prefHeight="50.0" prefWidth="120.0">
                      <HBox.margin>
-                        <Insets />
+                        <Insets left="10.0" />
                      </HBox.margin>
                   </TextField>
                </children>
             </HBox>
-            <Button mnemonicParsing="false" onAction="#updateStepsNumber" text="Update Daily Steps" textFill="#ff6459">
+            <Button mnemonicParsing="false" onAction="#updateStepsNumber" prefWidth="378.0" text="Update Daily Steps" textFill="#ff6459">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
                <VBox.margin>
-                  <Insets bottom="40.0" left="65.0" />
+                  <Insets bottom="40.0" left="50.0" />
                </VBox.margin>
                <font>
-                  <Font name="System Bold" size="34.5" />
+                  <Font name="System Bold" size="30.0" />
                </font>
                <effect>
                   <Blend />
@@ -159,10 +174,9 @@
                   </ProgressBar>
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-                        <Button mnemonicParsing="false" onAction="#returnToMainPage" prefHeight="36.0" prefWidth="139.0" text="return to main">
+                        <Button mnemonicParsing="false" onAction="#returnToMainPage" prefHeight="36.0" prefWidth="160.0" text="RETURN TO MAIN">
                            <HBox.margin>
-                              <Insets top="40.0" />
+                              <Insets left="100.0" right="20.0" top="40.0" />
                            </HBox.margin></Button>
                      </children>
                      <padding>
